# meta-serialization

./: CMakeLists.txt  README.md
include/: serialize.h
test/: serialize.cc
